Bug 336970 - Crash when copying a debug tartget in GDB plugin
Summary: Crash when copying a debug tartget in GDB plugin
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.12.5
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-07-02 12:18 UTC by Mark Janossy
Modified: 2014-07-04 16:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Janossy 2014-07-02 12:18:07 UTC
Application: kate (3.12.5)
KDE Platform Version: 4.12.5
Qt Version: 4.8.6
Operating System: Linux 3.14.8-200.fc20.x86_64 x86_64
Distribution: "Fedora release 20 (Heisenbug)"

-- Information about the crash:
I'm using the GDB plugin. On the buttom 'Debug View' in the 'Settings' tab, I entered the details (executable and arguments) for a debug target. Then clicked the middle 'copy' button to enter another one, and Kate immediately crashed. I reopened it, and repeated the same steps (since the settings disappeared with the crash), and the same thing happened. Then reopened it again, used the 'new' button instead of 'copy', and it worked (I needed to enter the executable/arguments again). I cannot reproduce the crash since, not even by deleting all targets, reopening kate and repeating the same steps.
As I see some references to strings in the stack trace, one thing to note might be the argument that I supplied contained plenty of special characters in a link: "-vvv http://localhost/~mark/playlist.m3u".

The crash can be reproduced sometimes.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
81	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f1c4d7b98c0 (LWP 16025))]

Thread 5 (Thread 0x7f1c3e694700 (LWP 16026)):
#0  0x000000372daea9dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x0000003731e495b4 in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7f1c38002bb0, timeout=-1, context=0x7f1c380009a0) at gmain.c:4007
#2  g_main_context_iterate (context=context@entry=0x7f1c380009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3708
#3  0x0000003731e496dc in g_main_context_iteration (context=0x7f1c380009a0, may_block=1) at gmain.c:3774
#4  0x00000038ea9b5a7e in QEventDispatcherGlib::processEvents (this=0x7f1c380008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#5  0x00000038ea98595f in QEventLoop::processEvents (this=this@entry=0x7f1c3e693cc0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00000038ea985cad in QEventLoop::exec (this=this@entry=0x7f1c3e693cc0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00000038ea879e8f in QThread::exec (this=this@entry=0x135aa90) at thread/qthread.cpp:538
#8  0x00000038ea9662e3 in QInotifyFileSystemWatcherEngine::run (this=0x135aa90) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00000038ea87c6bf in QThreadPrivate::start (arg=0x135aa90) at thread/qthread_unix.cpp:349
#10 0x000000372e207f33 in start_thread (arg=0x7f1c3e694700) at pthread_create.c:309
#11 0x000000372daf4ded in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 4 (Thread 0x7f1c3dd0c700 (LWP 16027)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00000038f318ef2b in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x38f348df00 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00000038f318ef69 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x000000372e207f33 in start_thread (arg=0x7f1c3dd0c700) at pthread_create.c:309
#4  0x000000372daf4ded in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 3 (Thread 0x7f1bb7406700 (LWP 16028)):
#0  0x00007fff6ddfe988 in clock_gettime ()
#1  0x000000372db02f3d in __GI___clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:115
#2  0x00000038ea8d3afb in do_gettime (frac=0x7f1bb7405a60, sec=0x7f1bb7405a58) at tools/qelapsedtimer_unix.cpp:127
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:144
#4  0x00000038ea9b7305 in updateCurrentTime (this=0x7f1bb0002660) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=0x7f1bb0002660, tm=...) at kernel/qeventdispatcher_unix.cpp:460
#6  0x00000038ea9b590c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f1bb7405b34) at kernel/qeventdispatcher_glib.cpp:143
#7  0x00000038ea9b59d5 in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f1bb7405b34) at kernel/qeventdispatcher_glib.cpp:176
#8  0x0000003731e48bed in g_main_context_prepare (context=context@entry=0x7f1bb00009a0, priority=priority@entry=0x7f1bb7405bc0) at gmain.c:3340
#9  0x0000003731e494bb in g_main_context_iterate (context=context@entry=0x7f1bb00009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3693
#10 0x0000003731e496dc in g_main_context_iteration (context=0x7f1bb00009a0, may_block=1) at gmain.c:3774
#11 0x00000038ea9b5a7e in QEventDispatcherGlib::processEvents (this=0x7f1bb00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#12 0x00000038ea98595f in QEventLoop::processEvents (this=this@entry=0x7f1bb7405d00, flags=...) at kernel/qeventloop.cpp:149
#13 0x00000038ea985cad in QEventLoop::exec (this=this@entry=0x7f1bb7405d00, flags=...) at kernel/qeventloop.cpp:204
#14 0x00000038ea879e8f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:538
#15 0x00007f1c3f869639 in KateProjectWorkerThread::run() () from /usr/lib64/kde4/kateprojectplugin.so
#16 0x00000038ea87c6bf in QThreadPrivate::start (arg=0x186d9d8) at thread/qthread_unix.cpp:349
#17 0x000000372e207f33 in start_thread (arg=0x7f1bb7406700) at pthread_create.c:309
#18 0x000000372daf4ded in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 2 (Thread 0x7f1bb6c05700 (LWP 16029)):
#0  0x000000372daea9dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x0000003731e495b4 in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7f1ba8002bb0, timeout=-1, context=0x7f1ba80009a0) at gmain.c:4007
#2  g_main_context_iterate (context=context@entry=0x7f1ba80009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3708
#3  0x0000003731e496dc in g_main_context_iteration (context=0x7f1ba80009a0, may_block=1) at gmain.c:3774
#4  0x00000038ea9b5a7e in QEventDispatcherGlib::processEvents (this=0x7f1ba80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#5  0x00000038ea98595f in QEventLoop::processEvents (this=this@entry=0x7f1bb6c04cc0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00000038ea985cad in QEventLoop::exec (this=this@entry=0x7f1bb6c04cc0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00000038ea879e8f in QThread::exec (this=this@entry=0x1004fd0) at thread/qthread.cpp:538
#8  0x00000038ea9662e3 in QInotifyFileSystemWatcherEngine::run (this=0x1004fd0) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00000038ea87c6bf in QThreadPrivate::start (arg=0x1004fd0) at thread/qthread_unix.cpp:349
#10 0x000000372e207f33 in start_thread (arg=0x7f1bb6c05700) at pthread_create.c:309
#11 0x000000372daf4ded in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7f1c4d7b98c0 (LWP 16025)):
[KCrash Handler]
#5  deref (this=0x51) at ../../src/corelib/arch/qatomic_x86_64.h:133
#6  QString::operator= (this=0x2a228a8, other=...) at tools/qstring.cpp:1411
#7  0x00007f1c3f21c13d in ConfigView::slotCopyTarget() () from /usr/lib64/kde4/kategdbplugin.so
#8  0x00007f1c3f21d035 in ConfigView::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) [clone .part.14] () from /usr/lib64/kde4/kategdbplugin.so
#9  0x00000038ea99b938 in QMetaObject::activate (sender=sender@entry=0x1437a70, m=m@entry=0x38ed0cbbc0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff6dd5dba0) at kernel/qobject.cpp:3567
#10 0x00000038ecc4ece2 in QAbstractButton::clicked (this=this@entry=0x1437a70, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:219
#11 0x00000038ec991c23 in QAbstractButtonPrivate::emitClicked (this=this@entry=0x143cb40) at widgets/qabstractbutton.cpp:548
#12 0x00000038ec992fd7 in QAbstractButtonPrivate::click (this=this@entry=0x143cb40) at widgets/qabstractbutton.cpp:541
#13 0x00000038ec9930dc in QAbstractButton::mouseReleaseEvent (this=0x1437a70, e=0x7fff6dd5e110) at widgets/qabstractbutton.cpp:1123
#14 0x00000038eca5499a in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:723
#15 0x00000038ec61dd78 in QWidget::event (this=0x1437a70, event=0x7fff6dd5e110) at kernel/qwidget.cpp:8389
#16 0x00000038ec5cae7c in QApplicationPrivate::notify_helper (this=0xcd3c70, receiver=0x1437a70, e=0x7fff6dd5e110) at kernel/qapplication.cpp:4565
#17 0x00000038ec5d1921 in QApplication::notify (this=<optimized out>, receiver=0x1437a70, e=0x7fff6dd5e110) at kernel/qapplication.cpp:4108
#18 0x0000003572c4ab0a in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#19 0x00000038ea986ebd in QCoreApplication::notifyInternal (this=0x7fff6dd5eb20, receiver=0x1437a70, event=0x7fff6dd5e110) at kernel/qcoreapplication.cpp:953
#20 0x00000038ec5d1097 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x1437a70, event=event@entry=0x7fff6dd5e110, alienWidget=alienWidget@entry=0x0, nativeWidget=nativeWidget@entry=0x1437a70, buttonDown=buttonDown@entry=0x38ed0de278 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at ../../src/corelib/kernel/qcoreapplication.h:231
#21 0x00000038ec64676b in QETWidget::translateMouseEvent (this=this@entry=0x1437a70, event=event@entry=0x7fff6dd5e480) at kernel/qapplication_x11.cpp:4540
#22 0x00000038ec6451dc in QApplication::x11ProcessEvent (this=0x7fff6dd5eb20, event=event@entry=0x7fff6dd5e480) at kernel/qapplication_x11.cpp:3663
#23 0x00000038ec66cc04 in x11EventSourceDispatch (s=s@entry=0xcdbe50, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#24 0x0000003731e492a6 in g_main_dispatch (context=0xcd9d20) at gmain.c:3066
#25 g_main_context_dispatch (context=context@entry=0xcd9d20) at gmain.c:3642
#26 0x0000003731e49628 in g_main_context_iterate (context=context@entry=0xcd9d20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3713
#27 0x0000003731e496dc in g_main_context_iteration (context=0xcd9d20, may_block=1) at gmain.c:3774
#28 0x00000038ea9b5a5e in QEventDispatcherGlib::processEvents (this=0xca1ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#29 0x00000038ec66cd86 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#30 0x00000038ea98595f in QEventLoop::processEvents (this=this@entry=0x7fff6dd5e870, flags=...) at kernel/qeventloop.cpp:149
#31 0x00000038ea985cad in QEventLoop::exec (this=this@entry=0x7fff6dd5e870, flags=...) at kernel/qeventloop.cpp:204
#32 0x00000038ea98b399 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1225
#33 0x0000003575006e15 in kdemain () from /lib64/libkdeinit4_kate.so
#34 0x000000372da21d65 in __libc_start_main (main=0x400800 <main>, argc=3, argv=0x7fff6dd5eca8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff6dd5ec98) at libc-start.c:285
#35 0x0000000000400831 in _start ()

Reported using DrKonqi
Comment 1 Kåre Särs 2014-07-02 12:52:52 UTC
Thanks for the report.

I'll have a look

/Kåre
Comment 2 Kåre Särs 2014-07-03 19:37:50 UTC
Git commit ee49519ec60d1686250453cb8a706d92119f9857 by Kåre Särs.
Committed on 03/07/2014 at 19:24.
Pushed by sars into branch 'KDE/4.13'.

GDB plugin: Fix copy empty target bugs

M  +4    -1    addons/kate/gdbplugin/configview.cpp

http://commits.kde.org/kate/ee49519ec60d1686250453cb8a706d92119f9857
Comment 3 Kåre Särs 2014-07-03 19:39:12 UTC
Git commit 92a45720a4493b2e24380cd68cf7443f560968d5 by Kåre Särs.
Committed on 03/07/2014 at 19:24.
Pushed by sars into branch 'master'.

GDB plugin: Fix copy empty target bugs

M  +4    -1    addons/kate/gdbplugin/configview.cpp

http://commits.kde.org/kate/92a45720a4493b2e24380cd68cf7443f560968d5
Comment 4 Kåre Särs 2014-07-04 16:43:21 UTC
Git commit 4acf558ee8c984ae153b29495ae5a1d466544db0 by Kåre Särs.
Committed on 04/07/2014 at 16:39.
Pushed by sars into branch 'frameworks'.

GDB plugin: Forward port: Fix copy empty target bug

M  +4    -1    addons/gdbplugin/configview.cpp

http://commits.kde.org/kate/4acf558ee8c984ae153b29495ae5a1d466544db0