GDB plugin: Fix copy empty target bugs

BUG: 336970